# codeshield-backend

./: .gitignore  README.md  SETUP.md  TESTING_SUMMARY.md  TEST_RESULTS.md  VERCEL_ENV_SETUP.md  pyproject.toml  requirements.txt  start.py  start_server.py  test_backend.py  vercel.json  verify_routes.py
app/: main.py
app/api/: exception.py
app/api/routes/: analyze.py
app/api/schemas/: analyze_schemas.py  common_schemas.py
app/config/: config.py  logger.py
app/infra/db/postgres/: base.py  postgres_config.py
app/infra/db/postgres/models/: __init__.py  code_analysis.py
app/services/: gemini_service.py
scripts/: init_database.sql
